# win_api_type_info

./: .gitignore  .gitmodules  build.bat  clean.bat  const_win32.json  const_x64.json  enum_win32.json  install.bat  makefile  struct_win32.json  struct_x64.json  typedef_win32.json  typedef_x64.json  util.go
01_preprocess/: CMakeLists.txt  makefile  stdafx.h
02_filter/: .gitignore  main.go  makefile
03_doxygen/: .gitignore  Doxyfile  makefile
04_combine_xml/: .gitignore  makefile
05_extract/: doxygen.go  main.go  makefile
06_generate_struct_size_dumper/: blacklist.txt  main.go  makefile
07_dump_struct_size/: .gitignore  CMakeLists.txt  makefile  offsetof.hpp  stdafx.cpp
08_update_json/: main.go  makefile
09_generate_macro_extractor/: main.go  makefile
10_extract_macro/: .gitignore  CMakeLists.txt  makefile
11_const_json/: main.go  makefile
